<resources>
  <string name="app_name">Examples</string>
  <string name="toolbar">Toolbar</string>
  <string name="format">Format</string>
  <string name="share">Share</string>
  <string name="add">Add</string>
  <string name="delete">Delete</string>
  <string name="modify">Modify</string>
  <string name="sliding_tab">Sliding Tab</string>

  <string name="tab_1">Tab 1</string>
  <string name="tab_2">Tab 2</string>
  <string name="tab_3">Tab 3</string>
  <string name="animation">Animation</string>
  <string name="translate">Translate</string>
  <string name="fade">Fade</string>
  <string name="rotate">Rotate</string>
  <string name="grid_view">Grid View</string>
  <string name="file">File</string>
  <string name="realm">Realm</string>
  <string name="name">name</string>
  <string name="create_update">Create/Update</string>
  <string name="find_by_name">Find by Name</string>
  <string name="all">All</string>
  <string name="find_by_age">Find by Age</string>
  <string name="age">age</string>
</resources>
