<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:title="@string/format"
      android:icon="@drawable/ic_toolbar_format"
      android:id="@+id/action_format"
      app:showAsAction="ifRoom" />

  <item android:title="@string/share"
      android:icon="@drawable/ic_toolbar_share"
      android:id="@+id/action_share"
      app:showAsAction="ifRoom" />


  <item android:title="@string/add"
      android:id="@+id/action_add"
      app:showAsAction="collapseActionView" />

  <item android:title="@string/delete"
      android:id="@+id/action_delete"
      app:showAsAction="collapseActionView" />

  <item android:title="@string/modify"
      android:id="@+id/action_modify"
      app:showAsAction="collapseActionView" />

</menu>